--- a/Doxy/latex/hybrid_8h.tex
+++ b/Doxy/latex/hybrid_8h.tex
@@ -6,6 +6,7 @@ Header file for the hybrid knapsack algorithm.
 
 
 {\ttfamily \#include $<$vector$>$}\newline
+{\ttfamily \#include "{}greedy.\+h"{}}\newline
 {\ttfamily \#include "{}bruteforce.\+h"{}}\newline
 \doxysubsubsection*{Functions}
 \begin{DoxyCompactItemize}
