--- a/Doxy/latex/hybrid_8h_source.tex
+++ b/Doxy/latex/hybrid_8h_source.tex
@@ -6,11 +6,12 @@
 \DoxyCodeLine{00002\ \textcolor{preprocessor}{\#define\ HYBRID\_H}}
 \DoxyCodeLine{00003\ }
 \DoxyCodeLine{00004\ \textcolor{preprocessor}{\#include\ <vector>}}
-\DoxyCodeLine{00005\ \textcolor{preprocessor}{\#include\ "{}\mbox{\hyperlink{bruteforce_8h}{bruteforce.h}}"{}}}
-\DoxyCodeLine{00006\ }
-\DoxyCodeLine{00011\ }
-\DoxyCodeLine{00018\ vector<Pallet>\ \mbox{\hyperlink{hybrid_8h_a1938c9baf0dd271bd2a15a0452779429}{hybridKnapsack}}(\textcolor{keyword}{const}\ \mbox{\hyperlink{struct_instance}{Instance}}\&\ instance);}
-\DoxyCodeLine{00019\ }
-\DoxyCodeLine{00020\ \textcolor{preprocessor}{\#endif}}
+\DoxyCodeLine{00005\ \textcolor{preprocessor}{\#include\ "{}\mbox{\hyperlink{greedy_8h}{greedy.h}}"{}}}
+\DoxyCodeLine{00006\ \textcolor{preprocessor}{\#include\ "{}\mbox{\hyperlink{bruteforce_8h}{bruteforce.h}}"{}}}
+\DoxyCodeLine{00007\ }
+\DoxyCodeLine{00012\ }
+\DoxyCodeLine{00019\ vector<Pallet>\ \mbox{\hyperlink{hybrid_8h_a1938c9baf0dd271bd2a15a0452779429}{hybridKnapsack}}(\textcolor{keyword}{const}\ \mbox{\hyperlink{struct_instance}{Instance}}\&\ instance);}
+\DoxyCodeLine{00020\ }
+\DoxyCodeLine{00021\ \textcolor{preprocessor}{\#endif}}
 
 \end{DoxyCode}
